--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMw27ebozYjBNccUjjxxYm",
+      "authorship_tag": "ABX9TyMMg1g34/UJykmNbnzug+kD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,7 @@
         "    combined_df\n",
         "    .sort_values(by='runtime', ascending=False)\n",
         "    .drop_duplicates(subset=['id'], keep='first')\n",
-        "    .sort_values(by='id')  # optional re-sort if you like\n",
+        "    .sort_values(by='id')\n",
         "    .reset_index(drop=True)\n",
         ")\n",
         "\n",
