--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMg1g34/UJykmNbnzug+kD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "-h-jK9OlcHSU"
       },
@@ -41,6 +40,15 @@
         "hulu_data = pd.read_csv(\"https://raw.githubusercontent.com/cacress/CSC442/refs/heads/main/datasets/titles_hulu.csv\")\n",
         "netflix_data = pd.read_csv(\"https://raw.githubusercontent.com/cacress/CSC442/refs/heads/main/datasets/titles_netflix.csv\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Test"
+      ],
+      "metadata": {
+        "id": "nDyvvmwT7LfQ"
+      }
     },
     {
       "cell_type": "code",
@@ -57,7 +65,7 @@
         "id": "GXNxHXjVcL1L",
         "outputId": "6eb4b6f5-452f-4067-b44f-8ded212822a9"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -105,7 +113,7 @@
         "id": "VBZJs1XsgrY7",
         "outputId": "a5cc002c-ee11-4e7d-9e30-10e9fcd18dfa"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +140,7 @@
         "id": "OxQJE79AcpJi",
         "outputId": "2b77f49b-82a5-458c-82e3-22a246a71e5f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +221,7 @@
         "id": "vZ1a5Qswctpz",
         "outputId": "f6de0ce9-596c-4a8e-a903-d29ab33f45b1"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +443,7 @@
         "id": "KCLs6qgpcxZq",
         "outputId": "9e9c4046-7876-4ff3-921b-a4249677a20e"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +493,7 @@
         "id": "mz9uJEC4c5lx",
         "outputId": "dab94703-da9c-4ed2-b6c2-7723102e0840"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +535,7 @@
         "id": "DGh9IYfBgi9A",
         "outputId": "0209e14c-eb3c-43e4-8ee6-bc4d505b5faf"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +575,7 @@
         "id": "oUCztcj7fSaO",
         "outputId": "1faf5492-420e-4ea5-d167-7fae3387396d"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +618,7 @@
         "id": "7UZceDGVhqmQ",
         "outputId": "718029d7-6068-4ea7-b8e1-9db3a8b65776"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,7 +796,7 @@
       "metadata": {
         "id": "oLav_CoSi9sf"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +812,7 @@
         "id": "1K9wsaWpjDHw",
         "outputId": "b7f56aa6-c855-412c-b804-bbb39702397b"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
