Added code for converting final_df to csv file.

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "-h-jK9OlcHSU"
       },
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         "id": "GXNxHXjVcL1L",
         "outputId": "0edfd7a1-e191-4a11-b964-a6bd85391c39"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
           "height": 147
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,7 +263,7 @@
         "id": "VBZJs1XsgrY7",
         "outputId": "6ea0ccff-3b80-480d-ae3b-56e0d512cdb5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
           "height": 458
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
         "id": "OxQJE79AcpJi",
         "outputId": "4d2353bc-32fa-4231-da1a-6a16297a9a70"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -476,7 +476,7 @@
         "id": "vZ1a5Qswctpz",
         "outputId": "e8d7bb53-7c0f-4a6f-f5d5-70e961f4fd22"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +673,7 @@
         "id": "KCLs6qgpcxZq",
         "outputId": "8b7795dd-6de1-4914-a411-ddd4d460a001"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +722,7 @@
         "id": "mz9uJEC4c5lx",
         "outputId": "b1c3307a-7bb5-40b1-eb0f-c2f3e85eaa59"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +763,7 @@
         "id": "DGh9IYfBgi9A",
         "outputId": "3ae1837b-8b8a-414e-911b-d92923e89ee6"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +803,7 @@
         "id": "oUCztcj7fSaO",
         "outputId": "1a811617-80db-473f-8fb0-3115bb926672"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
         "id": "7UZceDGVhqmQ",
         "outputId": "64377317-a047-41a4-a740-fdca0046a3b2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
       "metadata": {
         "id": "oLav_CoSi9sf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,7 +1075,7 @@
       "metadata": {
         "id": "arpiQBh39fT4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1091,7 +1091,7 @@
         "id": "1K9wsaWpjDHw",
         "outputId": "37d3113c-121b-4d26-bd7f-b7b9cc411a87"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,6 +1118,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Export the final merged/cleaned/wrangled dataset as csv\n",
+        "final_df.to_csv('merged.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "LDAbNc9A_GoF"
+      },
+      "execution_count": 22,
+      "outputs": []
     }
   ]
 }
