Converted seasons variable from float to int data type

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -1069,13 +1069,16 @@
         "# Rename genres column to genre (more consistent with the stored value)\n",
         "deduplicated_df.rename(columns={'genres': 'genre'}, inplace=True)\n",
         "\n",
+        "# Convert seasons from float to int data type\n",
+        "deduplicated_df['seasons'] = deduplicated_df['seasons'].astype('Int64')\n",
+        "\n",
         "# Reset the indexes of the rows.\n",
         "deduplicated_df.reset_index(drop=True, inplace=True)"
       ],
       "metadata": {
         "id": "arpiQBh39fT4"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1089,9 +1092,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1K9wsaWpjDHw",
-        "outputId": "37d3113c-121b-4d26-bd7f-b7b9cc411a87"
+        "outputId": "db6f85b4-0c07-4d2f-891f-62812a05e970"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,12 +1112,12 @@
             " 4   runtime               8160 non-null   int64   \n",
             " 5   genre                 8079 non-null   category\n",
             " 6   production_countries  8160 non-null   object  \n",
-            " 7   seasons               3370 non-null   float64 \n",
+            " 7   seasons               3370 non-null   Int64   \n",
             " 8   imdb_votes            7499 non-null   float64 \n",
             " 9   tmdb_popularity       8020 non-null   float64 \n",
             " 10  average_score         8039 non-null   float64 \n",
-            "dtypes: category(3), float64(4), int64(2), object(2)\n",
-            "memory usage: 535.2+ KB\n"
+            "dtypes: Int64(1), category(3), float64(3), int64(2), object(2)\n",
+            "memory usage: 543.2+ KB\n"
           ]
         }
       ]
@@ -1128,7 +1131,7 @@
       "metadata": {
         "id": "LDAbNc9A_GoF"
       },
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": []
     }
   ]
