Converted imdb_votes to an int

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "-h-jK9OlcHSU"
       },
@@ -48,12 +48,12 @@
       ],
       "metadata": {
         "id": "-iX7_ASN7n8i",
-        "outputId": "8b048bb0-8042-4fec-df46-419d54af75c5",
+        "outputId": "2db95e8f-2a43-4f1d-fd19-fa28e7d7efd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,12 +92,12 @@
       ],
       "metadata": {
         "id": "6WA8b1Bx7pDc",
-        "outputId": "2d43cba2-6dc6-489f-a24e-83f188321290",
+        "outputId": "d47fce5e-e33a-4dcb-ff4e-2ecc740eab31",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,9 +142,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GXNxHXjVcL1L",
-        "outputId": "0edfd7a1-e191-4a11-b964-a6bd85391c39"
+        "outputId": "f9da6b19-060c-479c-9b90-c6c8b72087f4"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,13 +172,13 @@
       ],
       "metadata": {
         "id": "eEVjvJc-7ufR",
-        "outputId": "7f0dd713-64e2-423c-9405-1cce5131c3ec",
+        "outputId": "171805df-bd46-4f0f-d569-ffb6cf26c6c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 147
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VBZJs1XsgrY7",
-        "outputId": "6ea0ccff-3b80-480d-ae3b-56e0d512cdb5"
+        "outputId": "51e2c9c4-dee5-46f8-8e4a-fb4327e0e151"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,13 +285,13 @@
       ],
       "metadata": {
         "id": "NNjGbnV08OMQ",
-        "outputId": "a3aca51d-d449-4d8f-e7eb-9ffa0a9f7792",
+        "outputId": "250818df-8573-4d0e-83ef-3048c8465e26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,9 +399,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OxQJE79AcpJi",
-        "outputId": "4d2353bc-32fa-4231-da1a-6a16297a9a70"
+        "outputId": "a80b2e64-0286-4617-9db7-1a6eced04204"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,9 +474,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vZ1a5Qswctpz",
-        "outputId": "e8d7bb53-7c0f-4a6f-f5d5-70e961f4fd22"
+        "outputId": "c114078b-884c-4504-ae6d-f70899f47c04"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,9 +671,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KCLs6qgpcxZq",
-        "outputId": "8b7795dd-6de1-4914-a411-ddd4d460a001"
+        "outputId": "cd874d98-86dc-49cc-eb56-5d5c104e297d"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,9 +720,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mz9uJEC4c5lx",
-        "outputId": "b1c3307a-7bb5-40b1-eb0f-c2f3e85eaa59"
+        "outputId": "b1f91db6-107a-4a63-a231-a92b7175fead"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,9 +761,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DGh9IYfBgi9A",
-        "outputId": "3ae1837b-8b8a-414e-911b-d92923e89ee6"
+        "outputId": "c6f1e615-7ba4-47a1-ff26-796586e429db"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,9 +801,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oUCztcj7fSaO",
-        "outputId": "1a811617-80db-473f-8fb0-3115bb926672"
+        "outputId": "9f4afff9-ea6f-4dd5-9a90-1b81e266a7d7"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -843,9 +843,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7UZceDGVhqmQ",
-        "outputId": "64377317-a047-41a4-a740-fdca0046a3b2"
+        "outputId": "f5d9458f-4428-4bf5-8529-6986c56d446d"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
       "metadata": {
         "id": "oLav_CoSi9sf"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1043,12 +1043,12 @@
       ],
       "metadata": {
         "id": "2xgf3B_79WvG",
-        "outputId": "b84bbca5-2141-4ebf-d5eb-b9937f3ee0e8",
+        "outputId": "f765962e-4b9e-4bfe-a4f6-484dcdd56f9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,8 +1069,9 @@
         "# Rename genres column to genre (more consistent with the stored value)\n",
         "deduplicated_df.rename(columns={'genres': 'genre'}, inplace=True)\n",
         "\n",
-        "# Convert seasons from float to int data type\n",
+        "# Convert seasons and imdb_votes from float to int data type\n",
         "deduplicated_df['seasons'] = deduplicated_df['seasons'].astype('Int64')\n",
+        "deduplicated_df['imdb_votes'] = deduplicated_df['imdb_votes'].astype('Int64')\n",
         "\n",
         "# Reset the indexes of the rows.\n",
         "deduplicated_df.reset_index(drop=True, inplace=True)"
@@ -1078,7 +1079,7 @@
       "metadata": {
         "id": "arpiQBh39fT4"
       },
-      "execution_count": 26,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1092,9 +1093,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1K9wsaWpjDHw",
-        "outputId": "db6f85b4-0c07-4d2f-891f-62812a05e970"
+        "outputId": "80ffb5d7-9e82-4288-bc3b-881b13813951"
       },
-      "execution_count": 27,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,11 +1114,11 @@
             " 5   genre                 8079 non-null   category\n",
             " 6   production_countries  8160 non-null   object  \n",
             " 7   seasons               3370 non-null   Int64   \n",
-            " 8   imdb_votes            7499 non-null   float64 \n",
+            " 8   imdb_votes            7499 non-null   Int64   \n",
             " 9   tmdb_popularity       8020 non-null   float64 \n",
             " 10  average_score         8039 non-null   float64 \n",
-            "dtypes: Int64(1), category(3), float64(3), int64(2), object(2)\n",
-            "memory usage: 543.2+ KB\n"
+            "dtypes: Int64(2), category(3), float64(2), int64(2), object(2)\n",
+            "memory usage: 551.2+ KB\n"
           ]
         }
       ]
@@ -1131,7 +1132,7 @@
       "metadata": {
         "id": "LDAbNc9A_GoF"
       },
-      "execution_count": 28,
+      "execution_count": 19,
       "outputs": []
     }
   ]
